2014-11-28 : Instructors no longer override other instructors rubrics in PP.
2014-11-28 : If a PP submission has been attempted 5 times and errors each time it will be removed from the queue.
2014-11-28 : Hard errors changed to soft errors when the cron is run.
2014-11-28 : Performance logging of curl calls (provided by Androgogic).
2014-11-28 : Turnitin Assignment inbox can now be sorted by similarity score and grade.
2014-11-17 : DV opening fixed for Moodle 2.3.
2014-11-17 : Cron scores update in the Plagiarism plugin are now split by submission type.
2014-11-17 : Post date stored correctly for PP assignment (thanks to Michael Aherne).
2014-11-17 : Post dates not updated for future PP assignments
2014-11-17 : Anonymous marking reveal form fixed and now initialises correctly on inbox load.
2014-11-17 : Incorrect repository value fixed when synching assignments in Plagiarism plugin.
2014-11-17 : Assignment title length check added on Turnitin assignments.
2014-11-17 : Resubmission grade warning no longer shown when resubmission is not possible.
2014-11-17 : Anonymous marking reveal form fixed and now initialises correctly on inbox load.
2014-10-08 : Student can delete a submission that hasn’t gone to Turnitin in a Turnitin assignment.
2014-10-08 : Document viewer no longer hangs in Safari and is no longer blocked by popups.
2014-10-08 : Editable date boxes now re-enable after esc is pressed while one is active
2014-10-08 : Select all checkbox fixed in Unlink users screen
2014-10-08 : Moodle assignment due dates now advanced by 1 day in Turnitin instead of 1 month.
2014-10-08 : Incorrect word count on text content submissions fixed.
2014-10-08 : Test connection now hidden on plugin upgrade.
2014-10-08 : Late submissions allowed setting in Turnitin for Plagiarism plugin assignments is now always true.
2014-10-08 : Czech language pack added.
2014-10-08 : EULA is now presented via an Iframe rather than a separate tab.