@@ -16,6 +16,7 @@ Release:    v2014012411
 	> Hard errors changed to soft errors when the PP cron is run.
 	> Instructors no longer override other instructors rubrics in PP.
 	> If a PP submission has been attempted 5 times and errors each time it will be removed from the queue.
+	> Multiple attempts are handled properly - except text content where previous attempts can not be viewed.
 
 ####################################################################################
 
