@@ -1,3 +1,4 @@
+2014-11-28 : Multiple attempts are handled properly.
 2014-11-28 : Instructors no longer override other instructors rubrics in PP.
 2014-11-28 : If a PP submission has been attempted 5 times and errors each time it will be removed from the queue.
 2014-11-28 : Hard errors changed to soft errors when the cron is run.
